--- a/src/app/components/viewerDialogs/appSharing/_AppSharing.scss
+++ b/src/app/components/viewerDialogs/appSharing/_AppSharing.scss
@@ -13,4 +13,8 @@
       vertical-align: text-top;
     }
   }
+
+  textarea {
+    resize: none;
+  }
 }
